Desenvolviemto das telas de login, feed e usuario.

--- a/sBlog_src/src/pages/configuration/configuration.html
+++ b/sBlog_src/src/pages/configuration/configuration.html
@@ -13,4 +13,5 @@
 
 <ion-content padding>
   <a class="btn btn-danger" (click)="logoff()">Logoff</a>
+  <a class="btn btn-danger" (click)="userConfigs()">Logoff</a>
 </ion-content>
