--- a/sBlog_src/src/pages/home/home.html
+++ b/sBlog_src/src/pages/home/home.html
@@ -1,27 +1,26 @@
-<ion-content padding>
-    <post *ngFor="let post of posts" [post]="post"></post>
-</ion-content>
-<ion-footer>
+<ion-header>
   <ion-item>
     <ion-grid>
       <ion-row>
         <ion-col text-center>
           <button ion-button icon-only full (click)="userPage()">
-            <img src="assets/svg/ic_person_outline_black_24px.svg">
+            <img src="assets/svg/ic_account_circle_white_48px.svg">
           </button>
         </ion-col>
         <ion-col text-center>
           <button ion-button icon-only full (click)="sectionPage()">
-            <img src="assets/svg/ic_line_weight_black_24px.svg">
+            <img src="assets/svg/ic_list_white_48px.svg">
           </button>
         </ion-col>
         <ion-col text-center>
           <button ion-button icon-only full (click)="configurationPage()">
-            <img src="assets/svg/ic_settings_black_24px.svg">
+            <img src="assets/svg/ic_settings_applications_white_48px.svg">
           </button>
         </ion-col>
       </ion-row>
     </ion-grid>
   </ion-item>
-</ion-footer>
-
+</ion-header>
+<ion-content padding>
+  <post *ngFor="let post of posts" [post]="post"></post>
+</ion-content>
