--- a/sBlog_src/src/pages/user/user.html
+++ b/sBlog_src/src/pages/user/user.html
@@ -1,22 +1,18 @@
-<!--
-  Generated template for the UserPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
-    <ion-title text-center>userPage</ion-title>
-    <button float-right ion-button icon-only clear (click)="userConfigs()">
-      <img src="assets/svg/ic_more_vert_black_24px.svg">
-    </button>
+    <ion-title>{{user?.name}}</ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content>
+  <div class="add_post_float">
+    <button ion-button (click)="addPost()">
+      <img src="assets/svg/ic_add_circle_outline_white_48px.svg">
+    </button>
+  </div>
   <user-page-detail [user]="user"></user-page-detail>
   <div *ngFor="let posts_id of user?.posts_id">
     <user-feed [postId]="posts_id.id" [user]="user"></user-feed>
   </div>
-  <a class="btn btn-default" (click)="addPost()">Add Post</a>
+  <a class="btn btn-default">Add Post</a>
   <a class="btn btn-danger" (click)="viewPost()">View Post</a>
 </ion-content>
