Realizado ajustes na estrutura das paginas. Criado novas paginas. Criado uma pagina para chat, testes para o projeto do trabalho.

--- a/sBlog_src/src/pages/recovery-password/recovery-password.html
+++ b/sBlog_src/src/pages/recovery-password/recovery-password.html
@@ -5,13 +5,38 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>recoveryPasswordPage</ion-title>
+    <ion-title>Recuperar Senha</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
 <ion-content padding>
+  <div class="content_login">
+    <div class="content_page_title">
+      <h2 class="medium">
+        Esqueceu a sua senha?
+      </h2>
+      <span>recupere ela agora!</span>
+    </div>
+    <form>
+      <div class="content_form_body">
+        <ion-item>
+          <ion-label floating>Email</ion-label>
+          <ion-input type="email"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label floating>Escolha uma senha</ion-label>
+          <ion-input type="password"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label floating>Confirme sua senha</ion-label>
+          <ion-input type="password"></ion-input>
+        </ion-item>
+        <div>
+          <button ion-button full (click)="addAccount()">Cadastrar</button>
+        </div>
+      </div>
+    </form>
+  </div>
 </ion-content>
