--- a/sBlog_src/src/pages/new-account/new-account.html
+++ b/sBlog_src/src/pages/new-account/new-account.html
@@ -1,17 +1,50 @@
-<!--
-  Generated template for the NewAccountPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>newAccountPage</ion-title>
+    <ion-title>Criar uma nova conta!</ion-title>
   </ion-navbar>
-
 </ion-header>
-
-
 <ion-content padding>
+  <div class="content_login">
+    <div class="content_page_title">
+      <h2>
+        Crie sua conta,
+      </h2>
+      <span>rapido e fácil!</span>
+    </div>
+    <form>
+      <div class="content_form_body">
+        <ion-item>
+          <ion-label floating>Nome</ion-label>
+          <ion-input type="text"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label floating>Sobre Nome</ion-label>
+          <ion-input type="password"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label floating>Email</ion-label>
+          <ion-input type="email"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label floating>Idade</ion-label>
+          <ion-input type="number"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label floating>Data de Nascimento</ion-label>
+          <ion-datetime displayFormat="MM/DD/YYYY"></ion-datetime>
+        </ion-item>
+        <ion-item>
+          <ion-label floating>Escolha uma senha</ion-label>
+          <ion-input type="password"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label floating>Confirme sua senha</ion-label>
+          <ion-input type="password"></ion-input>
+        </ion-item>
+        <div>
+          <button ion-button full (click)="addAccount()">Cadastrar</button>
+        </div>
+      </div>
+    </form>
+  </div>
 </ion-content>
