--- a/sBlog_src/src/pages/new-account/new-account.html
+++ b/sBlog_src/src/pages/new-account/new-account.html
@@ -1,8 +1,3 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>Criar uma nova conta!</ion-title>
-  </ion-navbar>
-</ion-header>
 <ion-content padding>
   <div class="content_login">
     <div class="content_page_title">
@@ -11,7 +6,7 @@
       </h2>
       <span>rapido e fácil!</span>
     </div>
-    <form>
+    <form [formGroup]="signupForm" (submit)="signupUser()" novalidate>
       <div class="content_form_body">
         <ion-item>
           <ion-label floating>Nome</ion-label>
@@ -19,11 +14,11 @@
         </ion-item>
         <ion-item>
           <ion-label floating>Sobre Nome</ion-label>
-          <ion-input type="password"></ion-input>
+          <ion-input type="text"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label floating>Email</ion-label>
-          <ion-input type="email"></ion-input>
+          <ion-input type="email" formControlName="email" type="email"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label floating>Idade</ion-label>
@@ -35,14 +30,14 @@
         </ion-item>
         <ion-item>
           <ion-label floating>Escolha uma senha</ion-label>
-          <ion-input type="password"></ion-input>
+          <ion-input type="password" formControlName="password" type="password"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label floating>Confirme sua senha</ion-label>
-          <ion-input type="password"></ion-input>
+          <ion-input type="password" formControlName="confirmPassword" type="password"></ion-input>
         </ion-item>
         <div>
-          <button ion-button full (click)="addAccount()">Cadastrar</button>
+          <button ion-button full [disabled]="!signupForm.valid">Cadastrar</button>
         </div>
       </div>
     </form>
