--- a/sBlog_src/src/pages/recovery-password/recovery-password.html
+++ b/sBlog_src/src/pages/recovery-password/recovery-password.html
@@ -1,16 +1,3 @@
-<!--
-  Generated template for the RecoveryPasswordPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-  <ion-navbar>
-    <ion-title>Recuperar Senha</ion-title>
-  </ion-navbar>
-</ion-header>
-
-
 <ion-content padding>
   <div class="content_login">
     <div class="content_page_title">
@@ -19,22 +6,14 @@
       </h2>
       <span>recupere ela agora!</span>
     </div>
-    <form>
+    <form [formGroup]="resetPasswordForm" (submit)="resetPassword()" novalidate>
       <div class="content_form_body">
         <ion-item>
           <ion-label floating>Email</ion-label>
           <ion-input type="email"></ion-input>
         </ion-item>
-        <ion-item>
-          <ion-label floating>Escolha uma senha</ion-label>
-          <ion-input type="password"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-label floating>Confirme sua senha</ion-label>
-          <ion-input type="password"></ion-input>
-        </ion-item>
         <div>
-          <button ion-button full (click)="addAccount()">Cadastrar</button>
+          <button ion-button full [disabled]="!resetPasswordForm.valid">Resetar Senha</button>
         </div>
       </div>
     </form>
